crates/deadline-cli/tests/snapshots/cli_farm__farm_get_with_farm_id_prints_details.snap
---
source: crates/deadline-cli/tests/cli_farm.rs
info:
  program: deadline
  args:
    - farm
    - get
    - "--farm-id"
    - farm-abc
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61289"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61289"
    AWS_ENDPOINT_URL_STS: "http://localhost:61289"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpH1Ypup/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpH1Ypup
---
success: true
exit_code: 0
----- stdout -----
farmId: farm-abc
displayName: My Farm
description: A test farm for rendering.
kmsKeyArn: arn:aws:kms:us-west-2:123456789012:key/abc
createdAt: 2024-06-15 10:30:00+00:00
createdBy: arn:aws:sts::123456789012:assumed-role/Admin/user
updatedAt: 2024-07-01 12:00:00+00:00
updatedBy: arn:aws:sts::123456789012:assumed-role/Admin/user


----- stderr -----
