crates/deadline-cli/tests/snapshots/cli_farm__farm_list_paginated_concatenates_all_pages.snap
---
source: crates/deadline-cli/tests/cli_farm.rs
info:
  program: deadline
  args:
    - farm
    - list
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:64487"
    AWS_ENDPOINT_URL_STS: "http://localhost:64487"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpMkrVCk/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpMkrVCk
---
success: true
exit_code: 0
----- stdout -----
- farmId: farm-page1
  displayName: Page 1 Farm
- farmId: farm-page2
  displayName: Page 2 Farm


----- stderr -----
